#
# Copyright (c) 2009      Cisco Systems, Inc.  All rights reserved. 
#
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

noinst_LTLIBRARIES = libmca_cfgi_base.la
libmca_cfgi_base_la_SOURCES = \
        public.h \
        private.h \
        components.h \
        cfgi_base_open.c \
        cfgi_base_close.c \
        cfgi_base_select.c

