#
# Copyright (c) 2009      Cisco Systems, Inc.  All rights reserved. 
#
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

noinst_LTLIBRARIES = libmca_clip_base.la
libmca_clip_base_la_SOURCES = \
        public.h \
        private.h \
        components.h \
        clip_base_open.c \
        clip_base_close.c \
        clip_base_select.c

