#
# Copyright (c) 2009      Cisco Systems, Inc.  All rights reserved. 
#
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

noinst_LTLIBRARIES = libmca_clip_default.la
libmca_clip_default_la_SOURCES = \
        clip_default.h \
        clip_default.c \
        clip_default_component.c
