#
# Copyright (c) 2009      Cisco Systems, Inc.  All rights reserved. 
#
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

noinst_LTLIBRARIES = libmca_fddp_base.la
libmca_fddp_base_la_SOURCES = \
        public.h \
        components.h \
        fddp_base_open.c \
        fddp_base_close.c \
        fddp_base_select.c
